--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "styled-components": "^5.3.6"
   }
 }
